projects/zem-external/apps/static/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static
spec:
  selector:
    app: static
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
