projects/zem-external/apps/static/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: static
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
        - static.zem.org.uk
      secretName: ingress-echo-tls
  ingressClassName: nginx
  rules:
    - host: "static.zem.org.uk"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: static
                port:
                  number: 80
